@@ -1,3 +1,7 @@
+# 2023/02/03
+- Maybe actually stopped bard crashes
+- Fix error in buff requests with unrecognized spells
+
 # 2023/02/01
 - More attempts at bard clicky issues
 - Med fixes
